New lexer; Lexer might be lacking proper EOF handling; Changed SymbolTable to a hash of lexeme and token; token contains lexeme and tokentype; tokennumber and tokenstring extend token and store the respective constant;